--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src = "./src/scenes/Menu.js"></script>
     <script src = "./src/scenes/Play.js"></script>
     <script src = "./src/scenes/Instructions.js"></script>
+    <script src = "src/scenes/Credit.js"></script>
     <script src = "./src/main.js"></script>
 
     <style>
